Refactor change detection logic in sync-obsidian workflow

--- a/.github/workflows/sync-obsidian.yml
+++ b/.github/workflows/sync-obsidian.yml
@@ -48,7 +48,14 @@ jobs:
       - name: 检查是否有更改
         id: check_changes
         run: |
-          git diff --quiet content/posts/ || echo "has_changes=true" >> $GITHUB_OUTPUT
+          git add content/posts/
+          if git diff --cached --quiet; then
+            echo "has_changes=false" >> $GITHUB_OUTPUT
+            echo "ℹ️ 没有检测到文章更改"
+          else
+            echo "has_changes=true" >> $GITHUB_OUTPUT
+            echo "✅ 检测到文章更改"
+          fi
       
       - name: 提交更改
         if: steps.check_changes.outputs.has_changes == 'true'
