--- a/.github/workflows/sync-obsidian.yml
+++ b/.github/workflows/sync-obsidian.yml
@@ -3,6 +3,9 @@ name: 同步 Obsidian 文章
 on:
   # 手动触发
   workflow_dispatch:
+  # 当 Obsidian 仓库更新时触发
+  repository_dispatch:
+    types: [obsidian_updated]
   # 定时触发（每天凌晨2点）
   schedule:
     - cron: '0 18 * * *'  # UTC 18:00 = 北京时间 02:00
