🔄 更新 Obsidian 同步工作流以支持子模块和修正分页设置

--- a/.github/workflows/sync-obsidian.yml
+++ b/.github/workflows/sync-obsidian.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           token: ${{ secrets.OBSIDIAN_TOKEN }}
           fetch-depth: 0
+          submodules: true
       
       - name: 检出 Obsidian 仓库
         uses: actions/checkout@v4
